# regex-accountant-config

./: .gitignore  README.md  pyproject.toml
regex_accountant_config/: README.md  amazon.py  cash_app.py  charity_navigator.py  fidelity.py  frantech.py  github.py  giving_what_we_can.py  hetzner.py  liberapay.py  namecheap.py  patreon.py  paypal.py  pikapods.py  plaid.html  plaid.py  utils.py  vanguard.py
